force-app/main/default/objects/Idol__c/Idol__c.object-meta.xml
<CustomObject>
    <description>Used for the management of Idol Talent</description>
    <label>Idol</label>
    <nameField>
        <label>Idol Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>