force-app/main/default/objects/Idol__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Idol has been assigned a group to prepare for their debut.</description>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>