force-app/main/default/objects/Idol__c/fields/Assigned_Location__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Idols</relationshipLabel>
    <relationshipName>Idols</relationshipName>
    <type>Lookup</type>
</CustomField>