force-app/main/default/objects/Idol__c/fields/Date_recruited__c.field-meta.xml
<CustomField>
    <fullName>Date_recruited__c</fullName>
    <label>Date recruited</label>
    <type>Date</type>
</CustomField>