force-app/main/default/objects/Idol__c/fields/Expected_Debut_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Debut_Date__c</fullName>
    <description>The date a trainee is expected to finish their training and debut</description>
    <label>Expected Debut Date</label>
    <type>Date</type>
</CustomField>