force-app/main/default/objects/Idol__c/fields/Final_Trials_Passed__c.field-meta.xml
<CustomField>
    <fullName>Final_Trials_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this trainee passed their final trials?</description>
    <label>Final Trials Passed</label>
    <type>Checkbox</type>
</CustomField>