force-app/main/default/objects/Idol__c/fields/Idol_Notes__c.field-meta.xml
<CustomField>
    <fullName>Idol_Notes__c</fullName>
    <description>Notes on this idol&apos;s overall state and wellbeing</description>
    <label>Idol Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>