force-app/main/default/objects/Idol__c/fields/Idol_Pay__c.field-meta.xml
<CustomField>
    <fullName>Idol_Pay__c</fullName>
    <label>Idol Pay</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>