force-app/main/default/objects/Idol__c/fields/Idol_phone__c.field-meta.xml
<CustomField>
    <fullName>Idol_phone__c</fullName>
    <label>Idol phone number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>