force-app/main/default/objects/Idol__c/fields/Notes_on_Trainee_Progress__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Trainee_Progress__c</fullName>
    <label>Notes on Trainee Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>