force-app/main/default/objects/Idol__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <formula>( Trainee_Music_Composition_Rating__c  +  Trainee_Dance_Rating__c  +  Trainee_Foreign_Language_Competency__c  +  Trainee_Vocals_Rating__c  )  / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>