force-app/main/default/objects/Idol__c/fields/Trainee_Dance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Dance_Rating__c</fullName>
    <description>Used to rate the dance skills of trainees from 1 to 10</description>
    <label>Trainee Dance Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>