force-app/main/default/objects/Idol__c/fields/Trainee_Foreign_Language_Competency__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Foreign_Language_Competency__c</fullName>
    <description>A rating of the idol&apos;s foreign language competencies on a scale from 1 to 10</description>
    <label>Trainee Foreign Language Competency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>