force-app/main/default/objects/Idol__c/fields/Trainee_Music_Composition_Rating__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Music_Composition_Rating__c</fullName>
    <description>The rating of the trainee&apos;s ability to compose their own music</description>
    <label>Trainee_Music Composition Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>