force-app/main/default/objects/Idol__c/fields/Trainee_Vocals_Rating__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Vocals_Rating__c</fullName>
    <description>Used to rate the vocal talent of an idol trainee on a scale from 1 to 10</description>
    <label>Trainee Vocals Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>