force-app/main/default/objects/Idol__c/recordTypes/Idol.recordType-meta.xml
<RecordType>
    <fullName>Idol</fullName>
    <active>true</active>
    <description>Fully fledged Idols that have debuted</description>
    <label>Idol</label>
</RecordType>