force-app/main/default/objects/Idol__c/recordTypes/Trainee.recordType-meta.xml
<RecordType>
    <fullName>Trainee</fullName>
    <active>true</active>
    <description>Idols who are still being trained</description>
    <label>Trainee</label>
</RecordType>