force-app/main/default/objects/Idol__c/validationRules/Language_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Language_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Trainee_Foreign_Language_Competency__c &lt; 0  ||   Trainee_Foreign_Language_Competency__c  &gt; 10</errorConditionFormula>
    <errorDisplayField>Trainee_Foreign_Language_Competency__c</errorDisplayField>
    <errorMessage>Rating must be between 0 and 10</errorMessage>
</ValidationRule>