force-app/main/default/objects/Idol__c/validationRules/Music_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Music_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Trainee_Music_Composition_Rating__c  &lt; 0   || Trainee_Music_Composition_Rating__c  &gt; 10</errorConditionFormula>
    <errorDisplayField>Trainee_Music_Composition_Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 0 and 10</errorMessage>
</ValidationRule>