force-app/main/default/objects/Idol__c/validationRules/Vocal_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Vocal_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Trainee_Vocals_Rating__c  &lt; 0  ||  Trainee_Vocals_Rating__c  &gt; 10</errorConditionFormula>
    <errorDisplayField>Trainee_Vocals_Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 0 and 10</errorMessage>
</ValidationRule>